--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Wade Yao</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
-        <h1><i><strong>Life is short.</strong><br />Smile<br />
-          while you still have teeth.</i></h1>
+          <h1><strong>Bo-You Yao</strong></h1>
+          <br />
+          <h1><i><strong>Life is short.</strong><br />Smile<br />
+            while you still have teeth.</i></h1>
 				</div>
 			</header>
 
@@ -36,9 +38,9 @@
 						<!-- </ul> -->
 					</section>
 
-				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+            <h2>Coursework</h2>
+            <h6><i>FPGA, RISC-V, UART, Verilog, Arduino, FreeRTOS, Message API</i></h6>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.png" class="image fit thumb"><img src="images/thumbs/01.png" alt="" /></a>
@@ -46,20 +48,45 @@
 								<p>Designed and implemented a customized UART device and single-cycle RISC-V CPU on FPGA, facilitating the execution of prebuilt executable code and output through the UART device.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/03.png" class="image fit thumb"><img src="images/thumbs/03.png" alt="" /></a>
+								<h3>Robotic Vacuum Cleaner</h3>
+								<p>An embedded application using Arduino UNO and L298N</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://youtu.be/0tOhvGmr_xc" class="image fit thumb"><img src="images/thumbs/06.png" alt="" /></a>
+								<h3>Lazy Pig</h3>
+								<p>An digitalized piggy bank with LineBot UI</p>
+							</article>
+						</div>
+						<!-- <ul class="actions"> -->
+						<!-- 	<li><a href="#" class="button">Full Portfolio</a></li> -->
+						<!-- </ul> -->
+					</section>
+
+					<section id="three">
+						<h2>Recent Work</h2>
+            <h6><i>QEMU, RISC-V, GNU toolchain, C/C++</i></h6>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
 								<h3>Educational Purpose Simulator</h3>
 								<p>Developed and implemented a Makefile and C code to encapsulate the QEMU RISC-V simulator and GNU toolchain.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.png" class="image fit thumb"><img src="images/thumbs/03.png" alt="" /></a>
-								<h3>Robotic Vacuum cleaner</h3>
-								<p>An embedded application using Arduino UNO and L298N</p>
+								<a href="images/fulls/04.png" class="image fit thumb"><img src="images/thumbs/04.png" alt="" /></a>
+								<h3>Sysmaker</h3>
+								<p>Developing a multi-resolution simulation model utilizing Discrete Event Simulation (DES) to verify designs created by Sysmaker.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://youtu.be/0tOhvGmr_xc" class="image fit thumb"><img src="images/thumbs/04.png" alt="" /></a>
-								<h3>Lazy Pig</h3>
-								<p>An digitalized piggy bank with LineBot Api</p>
-							</article>
+						</div>
+						<!-- <ul class="actions"> -->
+						<!-- 	<li><a href="#" class="button">Full Portfolio</a></li> -->
+						<!-- </ul> -->
+					</section>
+
+					<section id="four">
+						<h2>Side Projects</h2>
+            <h6><i>Linux, Vim scripts, Lua, Shell scripts</i></h6>
+						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.png" class="image fit thumb"><img src="images/thumbs/05.png" alt="" /></a>
 								<h3>Customized Development Environment</h3>
