--- a/index.html
+++ b/index.html
@@ -32,65 +32,41 @@
 						<header class="major">
 							<h2>About</h2>
 						</header>
-						<p>Currently pursuing a Master's degree in Computer Science at National Tsing-Hua University and am involved in a project focused on developing an auxiliary tool for system design (Sysmaker). Successfully designed and constructed a single-cycle RISC-V CPU on FPGA as a part of a course project.</p>
-						<!-- <ul class="actions"> -->
-						<!-- 	<li><a href="#" class="button">Learn More</a></li> -->
-						<!-- </ul> -->
+						<p>Graduated from the Department of Computer Science at National Tsing Hua University. Currently pursuing a Master's degree in Computer Science at National Tsing Hua University and involved in a project focused on developing an auxiliary tool for designing embedded system (Sysmaker).</p>
 					</section>
 
 					<section id="two">
-            <h2>Coursework</h2>
-            <h6><i>FPGA, RISC-V, UART, Verilog, Arduino, FreeRTOS, Message API</i></h6>
+            <h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.png" class="image fit thumb"><img src="images/thumbs/01.png" alt="" /></a>
-								<h3>RISC-V CPU on FPGA</h3>
-								<p>Designed and implemented a customized UART device and single-cycle RISC-V CPU on FPGA, facilitating the execution of prebuilt executable code and output through the UART device.</p>
+								<a href="fulls/riscvonfpga.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvonfpga_thumb.png" alt="" /></a>
+								<h3>RISC-V on FPGA</h3>
+								<p>A self-designed single-cycle RISC-V CPU and a UART device on FPGA using Verilog, facilitating the execution of prebuilt executable code and output through the UART device.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.png" class="image fit thumb"><img src="images/thumbs/03.png" alt="" /></a>
-								<h3>Robotic Vacuum Cleaner</h3>
-								<p>An embedded application using Arduino UNO and L298N</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://youtu.be/0tOhvGmr_xc" class="image fit thumb"><img src="images/thumbs/06.png" alt="" /></a>
-								<h3>Lazy Pig</h3>
-								<p>An digitalized piggy bank with LineBot UI</p>
-							</article>
-						</div>
-						<!-- <ul class="actions"> -->
-						<!-- 	<li><a href="#" class="button">Full Portfolio</a></li> -->
-						<!-- </ul> -->
-					</section>
-
-					<section id="three">
-						<h2>Recent Work</h2>
-            <h6><i>QEMU, RISC-V, GNU toolchain, C/C++</i></h6>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
+								<a href="fulls/riscvsim.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvsim_thumb.png" alt="" /></a>
 								<h3>Educational Purpose Simulator</h3>
-								<p>Developed and implemented a Makefile and C code to encapsulate the QEMU RISC-V simulator and GNU toolchain.</p>
+								<p>A collection of makefiles and .c files that simplify the workflow of RISC-V emulation and encapsulate the QEMU RISC-V simulator and GNU toolchain.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.png" class="image fit thumb"><img src="images/thumbs/04.png" alt="" /></a>
+								<a href="fulls/sysmaker.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/sysmaker_thumb.png" alt="" /></a>
 								<h3>Sysmaker</h3>
-								<p>Developing a multi-resolution simulation model utilizing Discrete Event Simulation (DES) to verify designs created by Sysmaker.</p>
+                <p>An ongoing project focused on developing an auxiliary tool for designing embedded system.</p>
 							</article>
-						</div>
-						<!-- <ul class="actions"> -->
-						<!-- 	<li><a href="#" class="button">Full Portfolio</a></li> -->
-						<!-- </ul> -->
-					</section>
-
-					<section id="four">
-						<h2>Side Projects</h2>
-            <h6><i>Linux, Vim scripts, Lua, Shell scripts</i></h6>
-						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.png" class="image fit thumb"><img src="images/thumbs/05.png" alt="" /></a>
+								<a href="fulls/cleaner.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/cleaner_thumb.png" alt="" /></a>
+								<h3>Robotic Vacuum Cleaner</h3>
+								<p>A robotic vacuum cleaner built on FreeRTOS and Arduino UNO.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="fulls/lazypig.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/lazypig_thumb.png" alt="" /></a>
+								<h3>Lazy Pig</h3>
+								<p>A digital piggy bank with LineBot user interface.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="fulls/env.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/env_thumb.png" alt="" /></a>
 								<h3>Customized Development Environment</h3>
-								<p>Configured a customized development environment tailored to my workflow, including installing and setting Awesome WM, zsh, and Neovim on Arch Linux.</p>
+								<p>A customized development environment tailored to my workflow. This environment includs a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.</p>
 							</article>
 						</div>
 						<!-- <ul class="actions"> -->
@@ -137,7 +113,7 @@
 					<!-- </section> -->
 
 				<!-- Four -->
-				<!--
+       <!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -452,7 +428,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
 
 					</section>
-				-->
+       -->
 
 			</div>
 
