--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/timeline.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
+					<img class="image avatar" src="images/avatar.png" alt="" />
           <h1><strong>Bo-You Yao</strong></h1>
           <br />
           <h1><i><strong>Life is short.</strong><br />Smile<br />
@@ -32,11 +33,39 @@
 						<header class="major">
 							<h2>About</h2>
 						</header>
-						<p>Graduated from the Department of Computer Science at National Tsing Hua University. Currently pursuing a Master's degree in Computer Science at National Tsing Hua University and involved in a project focused on developing an auxiliary tool for designing embedded system (Sysmaker).</p>
+						<p class='main_paragraph'>Graduated from the Department of Computer Science at National Tsing Hua University. Currently pursuing a Master's degree in Computer Science at National Tsing Hua University and involved in a project focused on developing an auxiliary tool for designing embedded system (Sysmaker).</p>
 					</section>
 
-					<section id="two">
-            <h2>Recent Work</h2>
+          <section id="two">
+						<header class="major">
+							<h2>Experience</h2>
+						</header>
+            <div class="container">
+              <div class="timeline-item" date-is='2022.09'>
+                <h1>Teaching Assistant for <i>Introduction to Programming in Python</i></h1>
+                <p>
+                  Serving as a teaching assistant for <i>"Introduction to Programming in Python"</i> at <i>NTHU</i>. Trying to help students discover their passion for coding and received positive feedback. This role has provided me with valuable insights into effectively conveying ideas to others and also enhanced my proficiency in Python programming.
+                </p>
+              </div>
+              <div class="timeline-item" date-is='2023.07'>
+                <h1>Internship at <i>MediaTek</i></h1>
+                <p>
+                  This experience exposed me to cutting-edge technologies that power the next generation devices. Provided me the opportunity to contribute to optimizing the debug process of bootloader and gained hands-on experience in analyzing the performence for linux kernel. This experience also provided me with insights into the importance of effective communication and collaborative problem-solving skills.
+                </p>
+              </div>
+              <div class="timeline-item" date-is='2023.09'>
+                <h1>Teaching Assistant for <i>Operating Systems</i></h1>
+                <p>
+                  Serving as a teaching assistant for <i>"Operating Systems"</i> at NTHU. Provided me with a valuable opportunity to apply the expertise acquired during my college years. The process of helping student solving problems and finishing assignments also equipped me with a more comprehensive understanding of knowledges about operating systems.
+                </p>
+              </div>
+            </div>
+          </section>
+
+					<section id="three">
+						<header class="major">
+              <h2>Recent Work</h2>
+						</header>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/riscvonfpga.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvonfpga_thumb.png" alt="" /></a>
