--- a/fulls/env.html
+++ b/fulls/env.html
@@ -7,9 +7,10 @@
 	</head>
   <body>
     <div style="padding: 2%">
-      <img class="image fit" src="images/fulls/env.png" alt="" /> 
+      <img class="image fit border" src="images/fulls/env.png" alt="" /> 
+      <hr class="rounded">
       <div id="desc" align="left">
-        <p>A customized development environment tailored to my workflow. This environment includs a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.<br />This process gave me a chance to review my workflow, particularly when tracing others' code or working on my own projects. I identified areas that were taking up too much time and tried to improve their efficiency.</p>
+        <p class='main_paragraph'>A customized development environment tailored to my workflow. This environment includs a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.<br /><br />This process gave me a chance to review my workflow, particularly when tracing others' code or working on my own projects. I identified areas that were taking up too much time and tried to improve their efficiency.</p>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Arch Linux</span>
