--- a/fulls/riscvonfpga.html
+++ b/fulls/riscvonfpga.html
@@ -7,9 +7,10 @@
 	</head>
   <body>
     <div style="padding:2%">
-      <img class="image fit" src="images/fulls/riscvonfpga.png" alt="" /> 
+      <img class="image fit border" src="images/fulls/riscvonfpga.png" alt="" /> 
+      <hr class="rounded">
       <div id="desc" align="left">
-        <p>A self-designed single-cycle RISC-V CPU and a UART device on FPGA using Verilog, facilitating the execution of prebuilt executable code and output through the UART device.<br />This project involved a comprehensive design process, including hardware design & implementation, simulation, and verification.<br />This is a team effort, and I am primarily responsible for the CPU component's design and implementation.</p>
+        <p class='main_paragraph'>A self-designed single-cycle RISC-V CPU and a UART device on FPGA using Verilog, facilitating the execution of prebuilt executable code and output through the UART device.<br />This project involved a comprehensive design process, including hardware design & implementation, simulation, and verification.<br />This is a team effort, and I am primarily responsible for the CPU component's design and implementation.</p>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Verilog</span>
