--- a/fulls/riscvsim.html
+++ b/fulls/riscvsim.html
@@ -7,9 +7,10 @@
 	</head>
   <body>
     <div style="padding: 2%">
-      <img class="image fit" src="images/fulls/riscvsim.png" alt="" /> 
+      <img class="image fit border" src="images/fulls/riscvsim.png" alt="" /> 
+      <hr class="rounded">
       <div id="desc" align="left">
-        <p>A collection of makefiles and .c files that simplify the workflow of RISC-V emulation and encapsulate the QEMU RISC-V simulator and GNU toolchain.<br />This project gives me a chance to delve deeper into how an emulator simulates a CPU and the details of the workflow for cross-compiling for a RISC-V CPU on an x86 host.</p>
+        <p class='main_paragraph'>A collection of makefiles and .c files that simplify the workflow of RISC-V emulation and encapsulate the QEMU RISC-V simulator and GNU toolchain.<br />This project gives me a chance to delve deeper into how an emulator simulates a CPU and the details of the workflow for cross-compiling for a RISC-V CPU on an x86 host.</p>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">QEMU</span>
