--- a/fulls/sysmaker.html
+++ b/fulls/sysmaker.html
@@ -7,9 +7,10 @@
 	</head>
   <body>
     <div style="padding: 2%">
-      <img class="image fit" src="images/fulls/sysmaker.png" alt="" /> 
+      <img class="image fit border" src="images/fulls/sysmaker.png" alt="" /> 
+      <hr class="rounded">
       <div id="desc" align="left">
-        <p>An ongoing research focused on developing an auxiliary tool for designing embedded system.<br />This research proposes a tag-based approach to eliminate the gap between higher-level block diagrams and schematic diagrams. At the same time, it verifies the user's design and provides editing suggestions to improve the efficiency of the design flow.<br />My main role in this project is to create a multi-resolution hardware-software co-simulation model utilizing Discrete Event Simulation (DES) to verify designs created by Sysmaker.</p>
+        <p class='main_paragraph'>An ongoing research focused on developing an auxiliary tool for designing embedded system.<br />This research proposes a tag-based approach to eliminate the gap between higher-level block diagrams and schematic diagrams. At the same time, it verifies the user's design and provides editing suggestions to improve the efficiency of the design flow.<br />My main role in this project is to create a multi-resolution hardware-software co-simulation model utilizing Discrete Event Simulation (DES) to verify designs created by Sysmaker.</p>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Embedded System Design</span>
