correct typo & update recent work

--- a/fulls/env.html
+++ b/fulls/env.html
@@ -10,7 +10,17 @@
       <img class="image fit border" src="images/fulls/env.png" alt="" /> 
       <hr class="rounded">
       <div id="desc" align="left">
-        <p class='main_paragraph'>A customized development environment tailored to my workflow. This environment includs a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.<br /><br />This process gave me a chance to review my workflow, particularly when tracing others' code or working on my own projects. I identified areas that were taking up too much time and tried to improve their efficiency.</p>
+        <div class='main_paragraph'>
+          <p>
+            A customized development environment tailored to my workflow. This environment includes a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.
+          </p>
+          <p>
+            This process gave me a chance to review my workflow, particularly when tracing others' code or working on my own projects. I identified areas that were taking up too much time and tried to improve their efficiency.
+          </p>
+          <p>
+            Recently, I have been in the process of transitioning from Awesome WM to Hyprland, a Wayland-based window manager. Simultaneously, I am developing a desktop environment daemon to gather information and create a universal interface for my environment using Rust.
+          </p>
+        </div>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Arch Linux</span>
@@ -18,6 +28,7 @@
           <span class="skill">Neovim</span>
           <span class="skill">Awesome WM</span>
           <span class="skill">Lua</span>
+          <span class="skill">Rust</span>
         </div>
       </div>
     </div>
