--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<header class="major">
 							<h2>About</h2>
 						</header>
-						<p class='main_paragraph'>Graduated from the Department of Computer Science at National Tsing Hua University. Currently pursuing a Master's degree in Computer Science at National Tsing Hua University and involved in a project focused on developing an auxiliary tool for designing embedded system (Sysmaker).</p>
+						<p class='main_paragraph'>Graduated from the Department of Computer Science at National Tsing Hua University. Currently pursuing a Master's degree in Computer Science at National Tsing Hua University and involving in a project focusing on developing an auxiliary tool for designing embedded system (Sysmaker).</p>
 					</section>
 
           <section id="two">
@@ -50,13 +50,13 @@
               <div class="timeline-item" date-is='2023.07'>
                 <h1>Internship at <i>MediaTek</i></h1>
                 <p>
-                  This experience exposed me to cutting-edge technologies that power the next generation devices. Provided me the opportunity to contribute to optimizing the debug process of bootloader and gained hands-on experience in analyzing the performence for linux kernel. This experience also provided me with insights into the importance of effective communication and collaborative problem-solving skills.
+                  This experience exposed me to cutting-edge technologies that power the next generation devices. It provided me the opportunity to contribute to optimizing the debug process of bootloader and gained hands-on experience in analyzing the performence for linux kernel. This experience also gave me insights into the importance of effective communication and collaborative problem-solving skills.
                 </p>
               </div>
               <div class="timeline-item" date-is='2023.09'>
                 <h1>Teaching Assistant for <i>Operating Systems</i></h1>
                 <p>
-                  Serving as a teaching assistant for <i>"Operating Systems"</i> at NTHU. Provided me with a valuable opportunity to apply the expertise acquired during my college years. The process of helping student solving problems and finishing assignments also equipped me with a more comprehensive understanding of knowledges about operating systems.
+                  Serving as a teaching assistant for <i>"Operating Systems"</i> at NTHU. This experience provided me with a valuable opportunity to apply the expertise acquired during my college years. The process of helping student solving problems and finishing assignments also equipped me with a more comprehensive understanding of knowledges about operating systems.
                 </p>
               </div>
             </div>
@@ -70,7 +70,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/riscvonfpga.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvonfpga_thumb.png" alt="" /></a>
 								<h3>RISC-V on FPGA</h3>
-								<p>A self-designed single-cycle RISC-V CPU and a UART device on FPGA using Verilog, facilitating the execution of prebuilt executable code and output through the UART device.</p>
+								<p>A self-designed single-cycle RISC-V CPU with UART as I/O on FPGA using Verilog, which execute prebuilt executables and output through the UART device.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/riscvsim.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvsim_thumb.png" alt="" /></a>
@@ -80,7 +80,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/sysmaker.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/sysmaker_thumb.png" alt="" /></a>
 								<h3>Sysmaker</h3>
-                <p>An ongoing project focused on developing an auxiliary tool for designing embedded system.</p>
+                <p>An ongoing project focusing on developing an auxiliary tool for designing embedded system.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/cleaner.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/cleaner_thumb.png" alt="" /></a>
@@ -95,7 +95,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/env.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/env_thumb.png" alt="" /></a>
 								<h3>Customized Development Environment</h3>
-								<p>A customized development environment tailored to my workflow. This environment includs a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.</p>
+								<p>A customized development environment tailored to my workflow. This environment includes a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.</p>
 							</article>
 						</div>
 						<!-- <ul class="actions"> -->
