--- a/fulls/cleaner.html
+++ b/fulls/cleaner.html
@@ -10,7 +10,14 @@
       <img class="image fit border" src="images/fulls/cleaner.png" alt="" /> 
       <hr class="rounded">
       <div id="desc" align="left">
-        <p class='main_paragraph'>A robotic vacuum cleaner built on FreeRTOS and Arduino UNO.<br />The design involves the repurposing of a portable fan and integration of several sensors and actuators, such as an ultrasonic distance sensor for collision detection, two gear motors for movement, a pressure sensor for load detection, and an infrared receiver for user commands. The main control logic is implemented using FreeRTOS within the Arduino UNO microcontroller.<br />This project marks my first experience applying academic knowledge to solving real-world problems.</p>
+        <div class='main_paragraph'>
+          <p>
+            A robotic vacuum cleaner built on FreeRTOS and Arduino UNO. This design involves the repurposing of a portable fan and integration of several sensors and actuators, such as an ultrasonic distance sensor for collision detection, two gear motors for movement, a pressure sensor for load detection, and an infrared receiver for user commands.
+          </p>
+          <p>
+            The main control logic is implemented using FreeRTOS within the Arduino UNO microcontroller. This project marks my first experience applying academic knowledge to solving real-world problems.
+          </p>
+        </div>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Embedded System Application</span>
