--- a/fulls/lazypig.html
+++ b/fulls/lazypig.html
@@ -10,7 +10,11 @@
       <img class="image fit border" src="images/fulls/lazypig.png" alt="" /> 
       <hr class="rounded">
       <div id="desc" align="left">
-        <p class='main_paragraph'>A digital piggy bank with a LineBot user interface.<br />This design uses four photointerrupters to identify different types of coins and a color sensor to differentiate between different bills. Furthermore, it provides a backend Flask server to store data and respond to commands from the LineBot UI through the Messaging API.</p>
+        <div class='main_paragraph'>
+          <p>
+            A digital piggy bank with a LineBot user interface. This design uses four photointerrupters to identify different types of coins and a color sensor to differentiate between different bills. Furthermore, it provides a backend Flask server to store data and respond to commands from the LineBot UI through the Messaging API.
+          </p>
+        </div>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Embedded System Application</span>
