--- a/fulls/riscvonfpga.html
+++ b/fulls/riscvonfpga.html
@@ -10,7 +10,14 @@
       <img class="image fit border" src="images/fulls/riscvonfpga.png" alt="" /> 
       <hr class="rounded">
       <div id="desc" align="left">
-        <p class='main_paragraph'>A self-designed single-cycle RISC-V CPU and a UART device on FPGA using Verilog, facilitating the execution of prebuilt executable code and output through the UART device.<br />This project involved a comprehensive design process, including hardware design & implementation, simulation, and verification.<br />This is a team effort, and I am primarily responsible for the CPU component's design and implementation.</p>
+        <div class='main_paragraph'>
+          <p>
+            A self-designed single-cycle RISC-V CPU with UART as I/O on FPGA using Verilog, which execute prebuilt executables and output through the UART device. This project involved a comprehensive design process, including hardware design and  implementation, simulation, and verification.
+          </p>
+          <p>
+            This project is a team effort, and my main role in this project is responsible for the design and implementation of the CPU component.
+          </p>
+        </div>
         <h4>Relevant Skills</h4>
         <div>
           <span class="skill">Verilog</span>
