--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 							<h2>Experience</h2>
 						</header>
             <div class="container">
-              <div class="timeline-item" date-is='2022.09'>
+              <div class="timeline-item" date-is='2022.09 - 2023.06'>
                 <h1>Teaching Assistant for <i>Introduction to Programming in Python</i></h1>
                 <p>
                   Serving as a teaching assistant for <i>"Introduction to Programming in Python"</i> at <i>NTHU</i>. Trying to help students discover their passion for coding and received positive feedback. This role has provided me with valuable insights into effectively conveying ideas to others and also enhanced my proficiency in Python programming.
                 </p>
               </div>
-              <div class="timeline-item" date-is='2023.07'>
+              <div class="timeline-item" date-is='2023.07 - 2023.08'>
                 <h1>Internship at <i>MediaTek</i></h1>
                 <p>
                   This experience exposed me to cutting-edge technologies that power the next generation devices. It provided me the opportunity to contribute to optimizing the debug process of bootloader and gained hands-on experience in analyzing the performence for linux kernel. This experience also gave me insights into the importance of effective communication and collaborative problem-solving skills.
                 </p>
               </div>
-              <div class="timeline-item" date-is='2023.09'>
+              <div class="timeline-item" date-is='2023.09 - 2024.01'>
                 <h1>Teaching Assistant for <i>Operating Systems</i></h1>
                 <p>
                   Serving as a teaching assistant for <i>"Operating Systems"</i> at NTHU. This experience provided me with a valuable opportunity to apply the expertise acquired during my college years. The process of helping student solving problems and finishing assignments also equipped me with a more comprehensive understanding of knowledges about operating systems.
@@ -68,19 +68,24 @@
 						</header>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="fulls/env.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/env_thumb.png" alt="" /></a>
+								<h3>Customized Development Environment</h3>
+								<p>A customized development environment tailored to my workflow. This environment includes a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/riscvonfpga.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvonfpga_thumb.png" alt="" /></a>
 								<h3>RISC-V on FPGA</h3>
 								<p>A self-designed single-cycle RISC-V CPU with UART as I/O on FPGA using Verilog, which execute prebuilt executables and output through the UART device.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="fulls/riscvsim.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvsim_thumb.png" alt="" /></a>
-								<h3>Educational Purpose Simulator</h3>
-								<p>A collection of makefiles and .c files that simplify the workflow of RISC-V emulation and encapsulate the QEMU RISC-V simulator and GNU toolchain.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/sysmaker.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/sysmaker_thumb.png" alt="" /></a>
 								<h3>Sysmaker</h3>
                 <p>An ongoing project focusing on developing an auxiliary tool for designing embedded system.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="fulls/riscvsim.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/riscvsim_thumb.png" alt="" /></a>
+								<h3>Educational Purpose Simulator</h3>
+								<p>A collection of makefiles and .c files that simplify the workflow of RISC-V emulation and encapsulate the QEMU RISC-V simulator and GNU toolchain.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="fulls/cleaner.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/cleaner_thumb.png" alt="" /></a>
@@ -91,11 +96,6 @@
 								<a href="fulls/lazypig.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/lazypig_thumb.png" alt="" /></a>
 								<h3>Lazy Pig</h3>
 								<p>A digital piggy bank with LineBot user interface.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="fulls/env.html" class="image fit thumb" data-poptrox="ajax,1000x800"><img src="images/thumbs/env_thumb.png" alt="" /></a>
-								<h3>Customized Development Environment</h3>
-								<p>A customized development environment tailored to my workflow. This environment includes a collection of setup for Awesome WM, zsh, and Neovim running on Arch Linux operating system.</p>
 							</article>
 						</div>
 						<!-- <ul class="actions"> -->
